# VVV

./: .gitignore  FIELD  pyproject.toml
constructor/: __init__.py  bondset.py  check_graph.py  constructor.py  dpd_files.py  exceptions.py  exeptions.py  mol.py  periodic_box.py  sample.py  sample_2.py
constructor/scan_track/: acf.py  att_l.py  autocor_one_chain.py  clusterization.py  helix.py  instance.py  list.sh  movie_from_TRACK.py  periodic_box.py  scan_track.py
tests/: test_check_graph.py  test_constructor.py  test_mol.py  test_periodic_box.py
