[tool.poetry]
name = "constructor"
version = "0.1.0"
description = ""
authors = ["Ivan Mikhailov <mikhailov.ivan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.24.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
mypy = "^1.0.1"
autopep8 = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
